# declare

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  package-lock.json  package.json  pyproject.toml  readme.md
.declare/: Dockerfile-dashboards  Dockerfile-hot-model-reloader  Dockerfile-hot-reload-models  Dockerfile-serve-models-api  Hatchet-Caddyfile  docker-compose.yml
.declare/dashboards/: index.html  main.jsx  vite.config.js
.declare/hot-model-reloader/: index.js  package-lock.json  package.json
.declare/hot-reload-models/: index.js  package-lock.json  package.json
.declare/serve-models-api/: index.js  package-lock.json  package.json
__declare__/: Dockerfile-dashboards  Dockerfile-hot-model-reloader  Dockerfile-serve-models-api  Dockerfile-studio  Dockerfile-studio-api  Dockerfile-workflow-worker  docker-compose.yml  start-airflow.sh
__declare__/dashboards/: lib.jsx  main.jsx  package.json  vite.config.js
__declare__/hot-model-reloader/: index.js
__declare__/kong/: kong.yml
__declare__/serve-models-api/: index.js
__declare__/studio/: bun.lockb  index.html  package-lock.json  package.json  vite.config.js
__declare__/studio-api/: bun.lockb  index.js  package.json
__declare__/workflows/: client.py  main.py
config/: Dockerfile-dashboards  Dockerfile-hot-reload-sql  docker-compose.yml
dashboards/: dog.jsx  index.html  orders.jsx  package-lock.json  package.json  vite.config.js
migrations/: 20240930_new_user.sql
models/: dbt_project.yml
workflows/: example_workflow.py
(+48 files in other folders)
