[project]
name = "declare"
version = "0.1.0"
description = "Open-source framework for doing data engineering & analytics development faster, built on Clickhouse"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.2",
    "python-dotenv>=1.0.1",
    "watchdog>=5.0.3",
    "dbt-core>=1.0.0",
    "dbt-clickhouse>=1.0.0",
    "uv>=1.0.0"
]
